added home.html and updated login.html

--- a/login.html
+++ b/login.html
@@ -131,7 +131,7 @@
                 if (response.ok) {
                     localStorage.setItem("token", result.token);
                     alert("Login successful! Redirecting...");
-                    window.location.href = "index1.html";
+                    window.location.href = "home.html";
                 } else {
                     alert(result.message || "Login failed.");
                 }
