changed quiz.html page and added pronounciation and dictonary page

--- a/home.html
+++ b/home.html
@@ -236,13 +236,13 @@
         </div>
         <nav>
           <ul class="nav-links">
-            <li><a href="quiz.html" target="_blank">Quizzes</a></li>
-            <li><a href="pro.html" target="_blank">Pronunciation</a></li>
-            <li><a href="dictionary.html" target="_blank">Dictionary</a></li>
+            <li><a href="http://localhost:5000/quiz" target="_blank">Quizzes</a></li>
+            <li><a href="http://localhost:5000/pro" target="_blank">Pronunciation</a></li>
+            <li><a href="http://localhost:5000/dict" target="_blank">Dictionary</a></li>
             <li>
               <a href="chat-history.html" target="_blank">Chat History</a>
             </li>
-            <li><a href="result.html" target="_blank">Progress Report</a></li>
+            <li><a href="http://localhost:5003/progress.ipynb" target="_blank">Progress Report</a></li>
             <li><a href="level.html" target="_blank">Level</a></li>
           </ul>
         </nav>
